# eldritchwire

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/: FUNDING.yml
.github/workflows/: create_gh_release.yml  release.yml  rust.yml
eldritch_shield/: Cargo.toml  LICENSE  README.md
eldritch_shield/src/: errors.rs  lib.rs  registers.rs  shield.rs  traits.rs  transport_adapters.rs
eldritch_shield/src/transport_adapters/: mock_i2c.rs  rppal.rs  test_data.txt
eldritchwire/: Cargo.toml
eldritchwire/src/: commands.rs  error.rs  lib.rs
eldritchwire/src/commands/: audio_commands.rs  color_correction_commands.rs  configuration_commands.rs  display_commands.rs  lens_commands.rs  media_commands.rs  output_commands.rs  ptz_control_commands.rs  reference_commands.rs  tally_commands.rs  video_commands.rs
eldritchwire_macros/: Cargo.toml  README.md
eldritchwire_macros/src/: lib.rs
src/: commands.rs  error.rs  lib.rs
src/commands/: lens_commands.rs
