[package]
name = "eldritch_shield"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Crate for interfacing with the Blackmagic 3G-SDI Shield for Arduino"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/eldritch_shield"
keywords = ["arduino", "Blackmagic", "bmd", "sdi", "sheild"]

[dependencies]
rppal = { version="0.22.1", optional = true }

[features]
default = []
rppal = ["dep:rppal"]
mock-i2c = []

[package.metadata.release]
pre-release-replacements = []
