[package]
name = "eldritchwire"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"
keywords = ["Blackmagic", "sdi", "camera_control", "bdm", "parsing"]

[dependencies]
eldritchwire_macros = { version = "0.2.1", path = "../eldritchwire_macros" }

[features]
"default" = ["bounds-checked", "ignore-nd-filter"]
"bounds-checked" = []
"ignore-nd-filter" = []
