[package]
name = "eldritchwire_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"

[features]
"default" = []
"bounds-checked" = []
